src/objects/SAFE_Responses__c.object
<CustomObject>
    <fields>
        <fullName>SAFE_Answer__c</fullName>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAFE_Question__c</fullName>
        <label>Question</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAFE_Risk_Assessment__c</fullName>
        <label>Risk Assessment</label>
        <referenceTo>SAFE_Risk_Assessment__c</referenceTo>
        <relationshipLabel>SAFE Responses</relationshipLabel>
        <relationshipName>Responses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SAFE_Score_Value__c</fullName>
        <label>Score Value</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SAFE Responses</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>SAFE_Risk_Assessment__c</columns>
        <columns>SAFE_Question__c</columns>
        <columns>SAFE_Answer__c</columns>
        <columns>SAFE_Score_Value__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>R-{00000}</displayFormat>
        <label>Response Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SAFE Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SAFE_IsScoreValueEmpty</fullName>
        <active>false</active>
        <errorConditionFormula>ISBLANK(SAFE_Score_Value__c)</errorConditionFormula>
        <errorDisplayField>SAFE_Score_Value__c</errorDisplayField>
        <errorMessage>Please enter the score value</errorMessage>
    </validationRules>
</CustomObject>